@@ -1,5 +1,6 @@
 = ActiveMerchant CHANGELOG
 
+* Remove @response instance variable from DataCashGateway [cody]
 * Don't use billing_address for shipping_address in CyberSourceGateway [cody]
 * Remove @response instance variable from CardStreamGateway [cody]
 * Remove @response instance variable from BrainTreeGateway [cody]
